syntax = "proto3";

option go_package = "./rpc";

service Node {
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Peek(PeekRequest) returns (PeekResponse) {}
  rpc Write(WriteRequest) returns (WriteResponse) {}
  rpc Modify(ModifyRequest) returns (ModifyResponse) {}
}

message ReadRequest {
  bytes key = 1;
}
message ReadResponse {
  uint64 tag = 1;
  bytes value = 2;
}

message PeekRequest {
  bytes key = 1;
}
message PeekResponse {
  uint64 tag = 1;
}

message WriteRequest {
  bytes key = 1;
  uint64 tag = 2;
  bytes value = 3;
}
message WriteResponse {}

message ModifyRequest {
  bytes key = 1;
  bytes request = 2;
}
message ModifyResponse {
//  bytes response = 1;
}
